--- a/main.html
+++ b/main.html
@@ -1,5 +1,13 @@
 <html>
 <body>
+<a href="./EURJPY/EURJPY.html">EURJPY</a>
+<a href="./GBPJPY/GBPJPY.html">GBPJPY</a>
 <a href="./AUDJPY/AUDJPY.html">AUDJPY</a>
+<a href="./NZDJPY/NZDJPY.html">NZDJPY</a>
+<a href="./EURUSD/EURUSD.html">EURUSD</a>
+<a href="./GBPUSD/GBPUSD.html">GBPUSD</a>
+<a href="./AUDUSD/AUDUSD.html">AUDUSD</a>
+<a href="./NZDUSD/NZDUSD.html">NZDUSD</a>
+<a href="./USDJPY/USDJPY.html">USDJPY</a>
 </body>
 </html>
