--- a/main.html
+++ b/main.html
@@ -1,13 +1,17 @@
 <html>
+<head>
+  <!-- 日本語 UTF-8 -->
+  <meta charset="utf-8">
+</head>
 <body>
-<a href="./EURJPY/EURJPY.html">EURJPY</a>
-<a href="./GBPJPY/GBPJPY.html">GBPJPY</a>
-<a href="./AUDJPY/AUDJPY.html">AUDJPY</a>
-<a href="./NZDJPY/NZDJPY.html">NZDJPY</a>
-<a href="./EURUSD/EURUSD.html">EURUSD</a>
-<a href="./GBPUSD/GBPUSD.html">GBPUSD</a>
-<a href="./AUDUSD/AUDUSD.html">AUDUSD</a>
-<a href="./NZDUSD/NZDUSD.html">NZDUSD</a>
-<a href="./USDJPY/USDJPY.html">USDJPY</a>
+<a href="./EURJPY/EURJPY.html">EURJPY</a><br/>
+<a href="./GBPJPY/GBPJPY.html">GBPJPY</a><br/>
+<a href="./AUDJPY/AUDJPY.html">AUDJPY</a><br/>
+<a href="./NZDJPY/NZDJPY.html">NZDJPY</a><br/>
+<a href="./EURUSD/EURUSD.html">EURUSD</a><br/>
+<a href="./GBPUSD/GBPUSD.html">GBPUSD</a><br/>
+<a href="./AUDUSD/AUDUSD.html">AUDUSD</a><br/>
+<a href="./NZDUSD/NZDUSD.html">NZDUSD</a><br/>
+<a href="./USDJPY/USDJPY.html">USDJPY</a><br/>
 </body>
 </html>
