--- a/EURJPY/EURJPY.html
+++ b/EURJPY/EURJPY.html
@@ -1,51 +1,59 @@
 <html>
-    <body>
-        <img src="EURJPY_2016-01~03.png" />
-        <img src="EURJPY_2016-03~05.png" />
-        <img src="EURJPY_2016-05~06.png" />
-        <img src="EURJPY_2016-05~06-002.png" />
-        <img src="EURJPY_2016-06~08.png" />
-        <img src="EURJPY_2016-08~09.png" />
-        <img src="EURJPY_2016-09~12.png" />
-        <img src="EURJPY_2016-12~2017-02.png" />
-        <img src="EURJPY_2017-02~04.png" />
-        <img src="EURJPY_2017-04~06.png" />
-        <img src="EURJPY_2017-06~08.png" />
-        <img src="EURJPY_2017-08~10.png" />
-        <img src="EURJPY_2017-10~11.png" />
-        <img src="EURJPY_2017-11~2018-01.png" />
-        <img src="EURJPY_2018-01~03.png" />
-        <img src="EURJPY_2018-03~05.png" />
-        <img src="EURJPY_2018-05~08.png" />
-        <img src="EURJPY_2018-08~10.png" />
-        <img src="EURJPY_2018-10~2019-01.png" />
-        <img src="EURJPY_2018-10~2019-01-002.png" />
-        <img src="EURJPY_2019-01~03.png" />
-        <img src="EURJPY_2019-03~06.png" />
-        <img src="EURJPY_2019-06~07.png" />
-        <img src="EURJPY_2019-07~09.png" />
-        <img src="EURJPY_2019-09~10.png" />
-        <img src="EURJPY_2019-10~11.png" />
-        <img src="EURJPY_2019-11~2020-01.png" />
-        <img src="EURJPY_2020-01~03.png" />
-        <img src="EURJPY_2020-03~05.png" />
-        <img src="EURJPY_2020-05~06.png" />
-        <img src="EURJPY_2020-06~08.png" />
-        <img src="EURJPY_2020-08~10.png" />
-        <img src="EURJPY_2020-10~2021-01.png" />
-        <img src="EURJPY_2020-10~2021-01-002.png" />
-        <img src="EURJPY_2021-01~03.png" />
-        <img src="EURJPY_2021-03~05.png" />
-        <img src="EURJPY_2021-05~07.png" />
-        <img src="EURJPY_2021-07~09.png" />
-        <img src="EURJPY_2021-09~12.png" />
-        <img src="EURJPY_2021-09~12-002.png" />
-        <img src="EURJPY_2021-12~2022-01.png" />
-        <img src="EURJPY_2022-01~03.png" />
-        <img src="EURJPY_2022-03~05.png" />
-        <img src="EURJPY_2022-05~08.png" />
-        <img src="EURJPY_2022-05~08-002.png" />
-        <img src="EURJPY_2022-08~09.png" />
-        <img src="EURJPY_2022-09~11.png" />
-    </body>
+<body>
+<img src="EURJPY_2016-01~03.png" />
+<img src="EURJPY_2016-03~04.png" />
+<img src="EURJPY_2016-04~06.png" />
+<img src="EURJPY_2016-06.png" />
+<img src="EURJPY_2016-06~08.png" />
+<img src="EURJPY_2016-08~09.png" />
+<img src="EURJPY_2016-09~12-001.png" />
+<img src="EURJPY_2016-09~12-002.png" />
+<img src="EURJPY_2016-12~2017-02-001.png" />
+<img src="EURJPY_2016-12~2017-02-002.png" />
+<img src="EURJPY_2017-02~04.png" />
+<img src="EURJPY_2017-04~06.png" />
+<img src="EURJPY_2017-06~08.png" />
+<img src="EURJPY_2017-08~10.png" />
+<img src="EURJPY_2017-10~11.png" />
+<img src="EURJPY_2017-11~2018-01.png" />
+<img src="EURJPY_2018-01-03-001.png" />
+<img src="EURJPY_2018-01-03-002.png" />
+<img src="EURJPY_2018-03-05.png" />
+<img src="EURJPY_2018-05-08-001.png" />
+<img src="EURJPY_2018-05-08-002.png" />
+<img src="EURJPY_2018-08-10-001.png" />
+<img src="EURJPY_2018-08-10-002.png" />
+<img src="EURJPY_2018-10~2019-01-001.png" />
+<img src="EURJPY_2018-10~2019-01-002.png" />
+<img src="EURJPY_2019-01~02.png" />
+<img src="EURJPY_2019-02~03.png" />
+<img src="EURJPY_2019-03~06.png" />
+<img src="EURJPY_2019-06~07.png" />
+<img src="EURJPY_2019-07~09.png" />
+<img src="EURJPY_2019-09~10.png" />
+<img src="EURJPY_2019-10~11.png" />
+<img src="EURJPY_2019-11~2020-01.png" />
+<img src="EURJPY_2020-01~03.png" />
+<img src="EURJPY_2020-03~05.png" />
+<img src="EURJPY_2020-05~06.png" />
+<img src="EURJPY_2020-06~08.png" />
+<img src="EURJPY_2020-08~09.png" />
+<img src="EURJPY_2020-09~10.png" />
+<img src="EURJPY_2020-10~2021-01-001.png" />
+<img src="EURJPY_2020-10~2021-01-002.png" />
+<img src="EURJPY_2021-01~03.png" />
+<img src="EURJPY_2021-03~05.png" />
+<img src="EURJPY_2021-05~06.png" />
+<img src="EURJPY_2021-06~08.png" />
+<img src="EURJPY_2021-08~09.png" />
+<img src="EURJPY_2021-09~12-001.png" />
+<img src="EURJPY_2021-09~12-002.png" />
+<img src="EURJPY_2021-12~2022-01.png" />
+<img src="EURJPY_2022-01~03.png" />
+<img src="EURJPY_2022-03~05.png" />
+<img src="EURJPY_2022-05~08-001.png" />
+<img src="EURJPY_2022-05~08-002.png" />
+<img src="EURJPY_2022-08~09.png" />
+<img src="EURJPY_2022-09~11.png" />
+</body>
 </html>
