--- a/EURUSD/EURUSD.html
+++ b/EURUSD/EURUSD.html
@@ -5,7 +5,7 @@
 <img src="EURUSD_2016-04~06.png" />
 <img src="EURUSD_2016-06~08.png" />
 <img src="EURUSD_2016-08~10.png" />
-<img src="EURUSD_2016-10~2017-01.png" />
+<img src="EURUSD_2016-10~2017~01.png" />
 <img src="EURUSD_2017-01~02.png" />
 <img src="EURUSD_2017-02~04.png" />
 <img src="EURUSD_2017-04~06.png" />
@@ -15,17 +15,19 @@
 <img src="EURUSD_2017-11~2018-01.png" />
 <img src="EURUSD_2018-01~03.png" />
 <img src="EURUSD_2018-03~05.png" />
-<img src="EURUSD_2018-03~05-002.png" />
-<img src="EURUSD_2018-05~08.png" />
+<img src="EURUSD_2018-05~06.png" />
+<img src="EURUSD_2018-06~08.png" />
 <img src="EURUSD_2018-08~10.png" />
 <img src="EURUSD_2018-10~11.png" />
 <img src="EURUSD_2018-11~2019-01.png" />
 <img src="EURUSD_2019-01~03.png" />
-<img src="EURUSD_2019-03~05.png" />
+<img src="EURUSD_2019-03~05-001.png" />
+<img src="EURUSD_2019-03~05-002.png" />
 <img src="EURUSD_2019-05~08.png" />
 <img src="EURUSD_2019-08~10.png" />
 <img src="EURUSD_2019-10~11.png" />
-<img src="EURUSD_2019-11~2020-02.png" />
+<img src="EURUSD_2019-11~2020-02-001.png" />
+<img src="EURUSD_2019-11~2020-02-002.png" />
 <img src="EURUSD_2020-02~03.png" />
 <img src="EURUSD_2020-03~04.png" />
 <img src="EURUSD_2020-04~06.png" />
@@ -35,7 +37,8 @@
 <img src="EURUSD_2020-11~12.png" />
 <img src="EURUSD_2020-12~2021-02.png" />
 <img src="EURUSD_2021-02~03.png" />
-<img src="EURUSD_2021-03~06.png" />
+<img src="EURUSD_2021-03~06-001.png" />
+<img src="EURUSD_2021-03~06-002.png" />
 <img src="EURUSD_2021-06~08.png" />
 <img src="EURUSD_2021-08~10.png" />
 <img src="EURUSD_2021-10~11.png" />
@@ -43,7 +46,9 @@
 <img src="EURUSD_2022-01~03.png" />
 <img src="EURUSD_2022-03~05.png" />
 <img src="EURUSD_2022-05~07.png" />
-<img src="EURUSD_2022-07~09.png" />
+<img src="EURUSD_2022-07~09-001.png" />
+<img src="EURUSD_2022-07~09-002.png" />
 <img src="EURUSD_2022-09~11.png" />
+<img src="EURUSD_2022-11~12.png" />
     </body>
 </html>
