--- a/サイクル/NZDJPY/NZDJPY.html
+++ b/サイクル/NZDJPY/NZDJPY.html
@@ -1,8 +1,10 @@
 <html>
-    <body>
+<body>
+<img src="NZDJPY_2016-01~02.png" />
 <img src="NZDJPY_2016-02~04.png" />
 <img src="NZDJPY_2016-04~05.png" />
-<img src="NZDJPY_2016-05~06.png" />
+<img src="NZDJPY_2016-05~06-01.png" />
+<img src="NZDJPY_2016-05~06-02.png" />
 <img src="NZDJPY_2016-06~08.png" />
 <img src="NZDJPY_2016-08~09.png" />
 <img src="NZDJPY_2016-09~11.png" />
@@ -25,14 +27,14 @@
 <img src="NZDJPY_2018-11~2019-01.png" />
 <img src="NZDJPY_2019-01~02.png" />
 <img src="NZDJPY_2019-02~03.png" />
-<img src="NZDJPY_2019-03~06.png" />
 <img src="NZDJPY_2019-03~06-002.png" />
+<img src="NZDJPY_2019-03~06.png" />
 <img src="NZDJPY_2019-06~08.png" />
 <img src="NZDJPY_2019-08~10.png" />
 <img src="NZDJPY_2019-10~11.png" />
 <img src="NZDJPY_2019-11~2020-01.png" />
-<img src="NZDJPY_2020-01~03.png" />
 <img src="NZDJPY_2020-01~03-002.png" />
+<img src="NZDJPY_2020-01~03.png" />
 <img src="NZDJPY_2020-03~05.png" />
 <img src="NZDJPY_2020-05~06.png" />
 <img src="NZDJPY_2020-06~08.png" />
@@ -47,12 +49,12 @@
 <img src="NZDJPY_2021-08~09.png" />
 <img src="NZDJPY_2021-09~12.png" />
 <img src="NZDJPY_2021-12~2022-01.png" />
-<img src="NZDJPY_2022-01~03.png" />
 <img src="NZDJPY_2022-01~03-002.png" />
+<img src="NZDJPY_2022-01~03.png" />
 <img src="NZDJPY_2022-03~05.png" />
 <img src="NZDJPY_2022-05~06.png" />
 <img src="NZDJPY_2022-06~08.png" />
 <img src="NZDJPY_2022-08~09.png" />
 <img src="NZDJPY_2022-09~11.png" />
-    </body>
+</body>
 </html>
