--- a/サイクル/USDJPY/USDJPY.html
+++ b/サイクル/USDJPY/USDJPY.html
@@ -1,7 +1,9 @@
 <html>
-    <body>
+<body>
+<img src="USDJPY_2016-01~02.png" />
 <img src="USDJPY_2016-02~04.png" />
-<img src="USDJPY_2016-04~06.png" />
+<img src="USDJPY_2016-04~06-001.png" />
+<img src="USDJPY_2016-04~06-002.png" />
 <img src="USDJPY_2016-06~08.png" />
 <img src="USDJPY_2016-08~09.png" />
 <img src="USDJPY_2016-09~11.png" />
@@ -27,10 +29,10 @@
 <img src="USDJPY_2019-08~10.png" />
 <img src="USDJPY_2019-10~11.png" />
 <img src="USDJPY_2019-11~2020-01.png" />
-<img src="USDJPY_2020-01~03.png" />
 <img src="USDJPY_2020-01~03-002.png" />
-<img src="USDJPY_2020-03~05.png" />
+<img src="USDJPY_2020-01~03.png" />
 <img src="USDJPY_2020-03~05-002.png" />
+<img src="USDJPY_2020-03~05.png" />
 <img src="USDJPY_2020-05~06.png" />
 <img src="USDJPY_2020-06~07.png" />
 <img src="USDJPY_2020-07~09.png" />
@@ -49,5 +51,5 @@
 <img src="USDJPY_2022-05~08.png" />
 <img src="USDJPY_2022-08~09.png" />
 <img src="USDJPY_2022-09~11.png" />
-    </body>
+</body>
 </html>
