--- a/サイクル/index.html
+++ b/サイクル/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
 </head>
 <body>
-<a href="./EURJPY/EURJPY.html">EURJPY</a><br/>
-<a href="./GBPJPY/GBPJPY.html">GBPJPY</a><br/>
-<a href="./AUDJPY/AUDJPY.html">AUDJPY</a><br/>
-<a href="./NZDJPY/NZDJPY.html">NZDJPY</a><br/>
-<a href="./EURUSD/EURUSD.html">EURUSD</a><br/>
-<a href="./GBPUSD/GBPUSD.html">GBPUSD</a><br/>
-<a href="./AUDUSD/AUDUSD.html">AUDUSD</a><br/>
-<a href="./NZDUSD/NZDUSD.html">NZDUSD</a><br/>
-<a href="./USDJPY/USDJPY.html">USDJPY</a><br/>
+<a href="./EURJPY/main.html">EURJPY</a><br/>
+<a href="./GBPJPY/main.html">GBPJPY</a><br/>
+<a href="./AUDJPY/main.html">AUDJPY</a><br/>
+<a href="./NZDJPY/main.html">NZDJPY</a><br/>
+<a href="./EURUSD/main.html">EURUSD</a><br/>
+<a href="./GBPUSD/main.html">GBPUSD</a><br/>
+<a href="./AUDUSD/main.html">AUDUSD</a><br/>
+<a href="./NZDUSD/main.html">NZDUSD</a><br/>
+<a href="./USDJPY/main.html">USDJPY</a><br/>
 </body>
 </html>
