--- a/サイクル/EURUSD/main.html
+++ b/サイクル/EURUSD/main.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+<body>
+<a href="../index.html">通貨一覧に戻る</a><br/>
 <img src="EURUSD_2016-01~03.png" />
 <img src="EURUSD_2016-03~04.png" />
 <img src="EURUSD_2016-04~06.png" />
@@ -50,5 +51,5 @@
 <img src="EURUSD_2022-07~09-002.png" />
 <img src="EURUSD_2022-09~11.png" />
 <img src="EURUSD_2022-11~12.png" />
-    </body>
+</body>
 </html>
