--- a/サイクル/USDJPY/main.html
+++ b/サイクル/USDJPY/main.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<a href="../index.html">通貨一覧に戻る</a><br/>
 <img src="USDJPY_2016-01~02.png" />
 <img src="USDJPY_2016-02~04.png" />
 <img src="USDJPY_2016-04~06-001.png" />
