--- a/サイクル/EURJPY/main.html
+++ b/サイクル/EURJPY/main.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<a href="../index.html">通貨一覧に戻る</a><br/>
 <img src="EURJPY_2016-01~03.png" />
 <img src="EURJPY_2016-03~04.png" />
 <img src="EURJPY_2016-04~06.png" />
