--- a/サイクル/GBPJPY/main.html
+++ b/サイクル/GBPJPY/main.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<a href="../index.html">通貨一覧に戻る</a><br/>
 <img src="GBPJPY_2016-01~02.png" />
 <img src="GBPJPY_2016-02~04.png" />
 <img src="GBPJPY_2016-04~05.png" />
