--- a/サイクル/index.html
+++ b/サイクル/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-<a href="../readme.md">一覧に戻る</a><br/>
+<a href="../readme.md">ルートに戻る</a><br/>
 <a href="./EURJPY/main.html">EURJPY</a><br/>
 <a href="./GBPJPY/main.html">GBPJPY</a><br/>
 <a href="./AUDJPY/main.html">AUDJPY</a><br/>
